fix: Don't make messages overlap

--- a/src/renderer/components/chat/chat-message/chat-message.styles.scss
+++ b/src/renderer/components/chat/chat-message/chat-message.styles.scss
@@ -15,7 +15,6 @@
   border-radius: var(--gad-border-radius-lg);
   padding: .4rem .7rem;
   font-family: var(--gad-display-font);
-  max-width: 85%;
 
   &:not(.contiguous)::before {
     content: '';
