--- a/src/renderer/components/chat/chat.styles.scss
+++ b/src/renderer/components/chat/chat.styles.scss
@@ -17,7 +17,8 @@ div {
 
   > gad-chat-message {
     margin-top: 1rem;
-    width: 100%;
+    width: 85%;
+    flex: 0 0 auto;
 
     &[contiguous] {
       margin-top: .3rem;
